# sukebe

./: .gitignore  README.md  config.example.json  pyproject.toml  webhooks.example.txt
.github/workflows/: builds.yml
src/: __main__.py
src/sukebe/: __init__.py
src/sukebe/utils/: __init__.py  client.py  constants.py  runner.py
