[tool.poetry]
name = "sukebe"
version = "0.1.0"
description = "pervert"
authors = ["dia ♡ <sora@harmony.rocks>"]
readme = "README.md"

[tool.black]
line-length = 99

[tool.isort]
profile = "black"
combine_as_imports = true
filter_files = true

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.24.1"
loguru = "^0.7.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
